objects/Automation_Task_Log__c.object
<CustomObject>
    <description>Generic object to hold the records the outcome (success or failure) of automation tasks</description>
    <fields>
        <fullName>EntityName__c</fullName>
        <description>Field to hold the name  of the entity/task performing the logging.</description>
        <label>EntityName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntityType__c</fullName>
        <description>Field to hold the type of entity - Apex Class, Batch Class, External ETL tool etc that is performing the automation task.</description>
        <label>EntityType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                    <default>true</default>
                    <label>Error</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Automation Task Log</label>
    <nameField>
        <displayFormat>ATL-{00000000}</displayFormat>
        <label>Automation Task Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automation Task Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>